--- a/dockerfiles/Dockerfile_1
+++ b/dockerfiles/Dockerfile_1
@@ -15,7 +15,7 @@ RUN apk update \
     && pip install --upgrade pip \
     && pip install psycopg2
 
-# Set the working directory.
+# Set the working directory inside the container.
 WORKDIR /usr/src/app
 
 # Copy contents of current directory to '/usr/src/app/' directory
